--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ openpyxl==3.1.0
 pandas==1.5.3
 python-dateutil==2.8.2
 pytz==2022.7.1
+PyYAML==6.0
 requests==2.28.2
 six==1.16.0
 urllib3==1.26.14
